# qagymv1.1

./: .dockerignore  Dockerfile  README.md  pyproject.toml
qagym-v11/: pytest.ini
qagym-v11/api/: client.py
qagym-v11/api/endpoints/: endpoints.py
qagym-v11/data/: config.py  payloads_loader.py
qagym-v11/data/payloads/cryptopairs/: create_cryptopair.json  currency.py
qagym-v11/data/queries/: get_cryptopair.py
qagym-v11/tests/: conftest.py  test_cryptopair_api.py
qagym-v11/utils/: http_status_codes.py  utils.py
