[tool.poetry]
name = "qagym-v11"
version = "0.1.1"
description = ""
authors = ["Aleksandr"]
readme = "README.md"
packages = [{include = "qagym-v11"}]

[tool.poetry.dependencies]
python = "^3.12"
pytest = "8.3.5"
requests = "2.32.3"
pydantic = "2.11.3"

[tool.poetry.group.dev.dependencies]
ipython = "9.2.0"
pytest-timeout = "2.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
